--- a/Admin/templates/Admin/base/base_field.html
+++ b/Admin/templates/Admin/base/base_field.html
@@ -1,19 +1,6 @@
-{% load widget_tweaks %}
-
 <div class="form-group{% if field.errors %} has-error{% endif %}">
-  <label for="{{ field.id_for_label }}">
-    {{ field.label }} {% if field.field.required %}<span class="text-danger">*</span>{% endif %}
-  </label>
-
-  {% with widget=field.field.widget %}
-    {% render_field field class=widget.attrs.class placeholder=widget.attrs.placeholder %}
-  {% endwith %}
-
-  {% if field.help_text %}
-    <small class="form-text text-muted">{{ field.help_text }}</small>
-  {% endif %}
-
-  {% for error in field.errors %}
-    <span class="help-block text-danger">{{ error }}</span>
-  {% endfor %}
+  {% include 'Admin/base/fields/label.html' with field=field %}
+  {% include 'Admin/base/fields/input.html' with field=field %}
+  {% include 'Admin/base/fields/help_text.html' with field=field %}
+  {% include 'Admin/base/fields/errors.html' with field=field %}
 </div>
