MP-3 Admin admin views: - Add basic user views, tables, forms, filters - Update table utils

--- a/Admin/templates/Admin/Users/base.html
+++ b/Admin/templates/Admin/Users/base.html
@@ -1,26 +1,11 @@
 {% extends 'Admin/base.html' %}
 {% load i18n hosts %}
 
-{% block title %}{{ block.super }} | {% trans 'Home' %}{% endblock %}
-
+{% block title %}{{ block.super }} | {% trans 'Users' %}{% endblock %}
 {% block menu-users-active %}active{% endblock %}
 
 {% block breadcrumb %}
   <li class="breadcrumb-item">
-    <a href="{% host_url 'home' host 'admin' %}">This is</a>
+    <a href="{% host_url 'users-list' host 'admin' %}">{% trans 'Users' %}</a>
   </li>
-  <li class="breadcrumb-item active">
-    <strong>Breadcrumb</strong>
-  </li>
-{% endblock %}
-
-{% block content %}
-  <div class="middle-box text-center animated fadeInRightBig">
-    <h3 class="font-bold">This is page content</h3>
-    <div class="error-desc">
-      You can create here any grid layout you want. And any variation layout you imagine:) Check out
-      main dashboard and other site. It use many different layout.
-      <br/><a href="{% host_url 'home' host 'admin' %}" class="btn btn-primary m-t">Dashboard</a>
-    </div>
-  </div>
 {% endblock %}
