--- a/Admin/templates/Admin/base/forms/fields/label.html
+++ b/Admin/templates/Admin/base/forms/fields/label.html
@@ -1,3 +1,5 @@
-<label for="{{ field.id_for_label }}">
-  {{ field.label }} {% if field.field.required %}<span class="text-danger">*</span>{% endif %}
-</label>
+{% if field.label %}
+  <label for="{{ field.id_for_label }}">
+    <strong>{{ field.label }}</strong> {% if field.field.required %}<span class="text-danger">*</span>{% endif %}
+  </label>
+{% endif %}
