--- a/Admin/templates/Admin/base.html
+++ b/Admin/templates/Admin/base.html
@@ -49,6 +49,17 @@
             <span>{% trans 'Users' %}</span>
           </a>
         </li>
+
+        <li class="{% block menu-handbooks-active %}{% endblock %}">
+          <a href="" aria-expanded="false">
+            <i class="fa fa-book"></i> <span class="nav-label">{% trans 'Handbooks' %}</span> <span class="fa arrow"></span>
+          </a>
+          <ul class="nav nav-second-level collapse {% block menu-handbooks-timezones-collapse %}{% endblock %}" aria-expanded="false">
+            <li class="{% block menu-handbooks-timezones-active %}{% endblock %}">
+              <a href="{% host_url 'handbooks:timezones-list' host 'admin' %}">{% trans 'Timezones' %}</a>
+            </li>
+          </ul>
+        </li>
       </ul>
 
     </div>
@@ -93,8 +104,6 @@
     <div class="wrapper wrapper-content">
       {% include 'Admin/base/messages.html' %}
       {% block content %}{% endblock %}
-    </div>
-    <div class="footer">
     </div>
 
   </div>
