MP-6 Timezone handbook: - Complete edit form - Fix table filter form

--- a/Admin/templates/Admin/Handbooks/TimezoneHandbooks/table_actions_column.html
+++ b/Admin/templates/Admin/Handbooks/TimezoneHandbooks/table_actions_column.html
@@ -3,3 +3,6 @@
 <a href="{% host_url 'handbooks:timezones-view' record.id host 'admin' %}" class="btn btn-default" type="button">
   <i class="fa fa-eye"></i>
 </a>
+<a href="{% host_url 'handbooks:timezones-edit' record.id host 'admin' %}" class="btn btn-info" type="button">
+  <i class="fa fa-pencil"></i>
+</a>
