--- a/Admin/templates/Admin/base/forms/form.html
+++ b/Admin/templates/Admin/base/forms/form.html
@@ -2,9 +2,7 @@
 
 <form {% if form.id %}id="{{ form.id }}"{% endif %} role="form" action="{{ form.action|default:'' }}"
       method="{{ form.method|default:'post' }}">
-  {% if form.with_csrf_token %}
-    {% csrf_token %}
-  {% endif %}
+  {% if form.skip_csf_token %}{% else %}{% csrf_token %}{% endif %}
   {% include 'Admin/base/non_field_errors.html' with form=form.form_body %}
 
   {% for field in form.form_body %}
