--- a/Admin/templates/Admin/Handbooks/TimezoneHandbooks/list.html
+++ b/Admin/templates/Admin/Handbooks/TimezoneHandbooks/list.html
@@ -1,7 +1,20 @@
 {% extends 'Admin/Handbooks/TimezoneHandbooks/base.html' %}
+{% load i18n hosts %}
 
 {% block action-area %}
-  Import/export/sync buttons
+  <div class="btn-group">
+    <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" aria-expanded="false">Action</button>
+    <ul class="dropdown-menu" x-placement="bottom-start">
+      <li><a class="dropdown-item"
+             href="{% host_url 'handbooks:timezones-import' host 'admin' %}">{% trans 'Import' %}</a></li>
+      <li><a class="dropdown-item"
+             href="{% host_url 'handbooks:timezones-export-json' host 'admin' %}">{% trans 'Export (.json)' %}</a></li>
+      <li><a class="dropdown-item"
+             href="{% host_url 'handbooks:timezones-export-csv' host 'admin' %}">{% trans 'Export (.csv)' %}</a></li>
+      <li><a class="dropdown-item" href="{% host_url 'handbooks:timezones-sync' host 'admin' %}">{% trans 'Sync' %}</a>
+      </li>
+    </ul>
+  </div>
 {% endblock %}
 
 {% block content %}
