--- a/Admin/templates/Admin/base/forms/fields/input.html
+++ b/Admin/templates/Admin/base/forms/fields/input.html
@@ -1,9 +1,3 @@
 {% load widget_tweaks %}
 
-{% with widget=field.field.widget %}
-  {% if widget.attrs.class %}
-    {% render_field field class=widget.attrs.class %}
-  {% else %}
-    {% render_field field class="form-control" %}
-  {% endif %}
-{% endwith %}
+{% render_field field class+="form-control" %}
