--- a/Admin/templates/Admin/Login/login.html
+++ b/Admin/templates/Admin/Login/login.html
@@ -28,9 +28,11 @@
 
       <div class="form-group{% if form.email.errors %} has-error{% endif %}">
         {% include 'Admin/base/forms/fields/input.html' with field=form.email %}
+        {% include 'Admin/base/forms/fields/errors.html' with field=form.email %}
       </div>
       <div class="form-group{% if form.password.errors %} has-error{% endif %}">
         {% include 'Admin/base/forms/fields/input.html' with field=form.password %}
+        {% include 'Admin/base/forms/fields/errors.html' with field=form.password %}
       </div>
       <button type="submit" class="btn btn-primary block full-width m-b">{% trans 'Login' %}</button>
 
