--- a/Admin/templates/Admin/Handbooks/base.html
+++ b/Admin/templates/Admin/Handbooks/base.html
@@ -3,7 +3,7 @@
 
 {% block title %}{{ block.super }} | {% trans 'Handbooks' %}{% endblock %}
 {% block menu-handbooks-active %}active{% endblock %}
-{% block menu-handbooks-timezones-collapse %}in{% endblock %}
+{% block menu-handbooks-collapse %}in{% endblock %}
 
 {% block breadcrumb %}
   <li class="breadcrumb-item">
