MP-8 Medicine Handbooks: - Add allergy types admin views, tables, filters

--- a/Admin/templates/Admin/Handbooks/TimezoneHandbooks/list.html
+++ b/Admin/templates/Admin/Handbooks/TimezoneHandbooks/list.html
@@ -3,7 +3,7 @@
 
 {% block action-area %}
   <div class="btn-group">
-    <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" aria-expanded="false">Action</button>
+    <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" aria-expanded="false">{% trans 'Action' %}</button>
     <ul class="dropdown-menu" x-placement="bottom-start">
       <li><a class="dropdown-item"
              href="{% host_url 'handbooks:timezones-import' host 'admin' %}">{% trans 'Import' %}</a></li>
