MP-8 Medicine Handbooks: - Add allergy causes admin views, tables, filters

--- a/Admin/templates/Admin/base.html
+++ b/Admin/templates/Admin/base.html
@@ -77,6 +77,9 @@
             <li class="{% block menu-medicine-allergy-types-active %}{% endblock %}">
               <a href="{% host_url 'medicine:allergy-types-list' host 'admin' %}">{% trans 'Allergy types' %}</a>
             </li>
+            <li class="{% block menu-medicine-allergy-causes-active %}{% endblock %}">
+              <a href="{% host_url 'medicine:allergy-causes-list' host 'admin' %}">{% trans 'Allergy causes' %}</a>
+            </li>
           </ul>
         </li>
       </ul>
