--- a/Admin/templates/Admin/base.html
+++ b/Admin/templates/Admin/base.html
@@ -80,6 +80,9 @@
             <li class="{% block menu-medicine-allergy-causes-active %}{% endblock %}">
               <a href="{% host_url 'medicine:allergy-causes-list' host 'admin' %}">{% trans 'Allergy causes' %}</a>
             </li>
+            <li class="{% block menu-medicine-allergy-reactions-active %}{% endblock %}">
+              <a href="{% host_url 'medicine:allergy-reactions-list' host 'admin' %}">{% trans 'Allergy reactions' %}</a>
+            </li>
           </ul>
         </li>
       </ul>
