MP-8 Medicine Handbooks: - Add icd-10 admin views, tables, filters

--- a/Admin/templates/Admin/base.html
+++ b/Admin/templates/Admin/base.html
@@ -83,6 +83,9 @@
             <li class="{% block menu-medicine-allergy-reactions-active %}{% endblock %}">
               <a href="{% host_url 'medicine:allergy-reactions-list' host 'admin' %}">{% trans 'Allergy reactions' %}</a>
             </li>
+            <li class="{% block menu-medicine-icd10-active %}{% endblock %}">
+              <a href="{% host_url 'medicine:icd10-list' host 'admin' %}">{% trans 'ICD-10' %}</a>
+            </li>
           </ul>
         </li>
       </ul>
