MP-8 Medicine Handbooks: - Add patient relations admin views, tables, filters

--- a/Admin/templates/Admin/base.html
+++ b/Admin/templates/Admin/base.html
@@ -86,6 +86,9 @@
             <li class="{% block menu-medicine-icd10-active %}{% endblock %}">
               <a href="{% host_url 'medicine:icd10-list' host 'admin' %}">{% trans 'ICD-10' %}</a>
             </li>
+            <li class="{% block menu-medicine-patient-relations-active %}{% endblock %}">
+              <a href="{% host_url 'medicine:patient-relations-list' host 'admin' %}">{% trans 'Patient relations' %}</a>
+            </li>
           </ul>
         </li>
       </ul>
